; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-adsl-mei/src/extr_drv_mei_cpe.c_IFX_MEI_AdslMailboxIRQEnable.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-adsl-mei/src/extr_drv_mei_cpe.c_IFX_MEI_AdslMailboxIRQEnable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DSL_DEV_MEI_ERR_SUCCESS = common dso_local global i32 0, align 4
@DSL_DEV_MEI_ERR_FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @IFX_MEI_AdslMailboxIRQEnable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IFX_MEI_AdslMailboxIRQEnable(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %15 [
    i32 0, label %7
    i32 1, label %11
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @DSL_DEV_MEI_ERR_SUCCESS, align 4
  store i32 %8, i32* %5, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @IFX_MEI_IRQDisable(i32* %9)
  br label %17

11:                                               ; preds = %2
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @IFX_MEI_IRQEnable(i32* %12)
  %14 = load i32, i32* @DSL_DEV_MEI_ERR_SUCCESS, align 4
  store i32 %14, i32* %5, align 4
  br label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @DSL_DEV_MEI_ERR_FAILURE, align 4
  store i32 %16, i32* %5, align 4
  br label %17

17:                                               ; preds = %15, %11, %7
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @IFX_MEI_IRQDisable(i32*) #1

declare dso_local i32 @IFX_MEI_IRQEnable(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
